i sux @ everything - jeemin park

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </div>
     <div class="Contact" id="Contact">
-        <h2>Contact Us</h2>
+        <h2>Cont&aacute;ctenos</h2>
         <div class="pure-g">
             <div class="pure-u-1-5">
                 <p></p>
