--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="pure-u-1-5">
                     <img src="fedora.jpg">
-                    <a href="#"><h3>El Fedora</h3></a>
+                    <a href="#"><h3>La Fedora</h3></a>
                     <p>13.37 euros</p>
                 </div>
                 <div class="pure-u-1-8">
